--- a/app/src/main/res/layout/content_choix.xml
+++ b/app/src/main/res/layout/content_choix.xml
@@ -25,7 +25,7 @@
             android:scaleType="fitCenter"
             app:layout_column="0"
             app:layout_row="0"
-            app:srcCompat="@mipmap/ic_launcher_foreground_st_marteen" />
+            app:srcCompat="@drawable/st_martin" />
 
         <TextView
             android:id="@+id/Titre"
